# aoc-2025-python

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.zed/: debug.json
src/aoc/: runner.py
src/aoc/days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
