[project]
name = "aoc-2025-python"
version = "0.1.0"
description = "Advent of Code 2025 in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
aoc = "aoc.runner:main"

[tool.uv]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aoc"]
